--- a/package.json
+++ b/package.json
@@ -2,13 +2,28 @@
   "name": "server",
   "version": "0.0.0",
   "private": true,
+  "nodemonConfig": {
+    "watch": ["server/*", "public/*"],
+    "ignore": ["**/__tests__/**", "*.test.js", "*.spec.js"]
+  },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "npm-run-all clean transpile serve",
+    "clean": "rimraf production",
+    "transpile": "babel ./server --out-dir production",
+    "serve": "node ./production/bin/www"
+  },
+  "babel": {
+    "presets": ["@babel/preset-env"]
   },
   "dependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2"
   }
 }
