--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "nodemonConfig": {
-    "watch": ["server/*", "public/*"],
-    "ignore": ["**/__tests__/**", "*.test.js", "*.spec.js"]
+    "watch": [
+      "server/*",
+      "public/*"
+    ],
+    "ignore": [
+      "**/__tests__/**",
+      "*.test.js",
+      "*.spec.js"
+    ]
   },
   "scripts": {
     "start": "npm-run-all clean transpile serve",
@@ -13,15 +20,22 @@
     "serve": "node ./production/bin/www"
   },
   "babel": {
-    "presets": ["@babel/preset-env"]
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
   },
   "dependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "mongoose": "^5.9.18",
     "morgan": "~1.9.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2"
