--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@babel/core": "^7.10.2",
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
+    "@hapi/joi": "^17.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
     "morgan": "~1.9.1",
     "npm-run-all": "^4.1.5",
