--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@hapi/joi": "^17.1.1",
+    "@sendgrid/mail": "^7.2.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
